# ros_plutarco

./: README.md
extra_config_file/etc/udev/: plutarco.rules
plutarco_base/: CMakeLists.txt  package.xml
plutarco_base/launch/: plutarco_base.launch
plutarco_base/launch/include/: bringup.launch
plutarco_control/: CMakeLists.txt  package.xml
plutarco_control/config/: control.yaml  localization.yaml  plutarco.yaml  teleop.yaml  unav.yaml
plutarco_control/launch/: control.launch  driver.launch  teleop.launch
plutarco_control/launch/include/: driver.launch  imu.launch
plutarco_demo/: CMakeLists.txt  package.xml
plutarco_demo/launch/: plutarco_demo1.launch  wandering.launch
plutarco_demo/launch/include/: bringup.launch
plutarco_description/: CMakeLists.txt  package.xml
plutarco_description/launch/: description.launch  display.launch
plutarco_description/meshes/sensors/: stereolabs_zed.STL
plutarco_description/urdf/: active_sprocket.urdf.xacro  description.xacro  materials.urdf  model_generated_debug.urdf  motor.urdf.xacro  passive_sprocket.urdf.xacro  plutarco.gv  plutarco.urdf  plutarco.urdf.xacro  wheel.urdf.xacro
plutarco_description/urdf/models/: AssemblyCollo.stl  Body.stl  Body1.stl  Plutarco_Head.stl
plutarco_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  zed.urdf.xacro
plutarco_laser/: CMakeLists.txt  package.xml
plutarco_laser/launch/: laser.launch  laser_v2.launch
plutarco_startup/: CMakeLists.txt  package.xml
plutarco_startup/launch/: plutarco_startup.launch
