<?xml version="1.0"?>
<package>
  <name>plutarco_base</name>
  <version>0.1.0</version>
  <description>
	This is the base set of node to work with Plutarco
  </description>

  
  <maintainer email="mauro.soligo@katodo.com">Mauro Soligo</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/katodo/ros_plutarco/plutarco_base</url>

  <author email="mauro.soligo@katodo.com">Mauro Soligo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>robot_description</run_depend>
  <run_depend>orbus_interface</run_depend>

</package>
