<?xml version="1.0"?>
<package>
  <name>plutarco_description</name>
  <version>0.1.0</version>
  <description>
	This is the configuration package for the robot 4UDE.
  </description>

  
  <maintainer email="mauro.soligo@katodo.com">Mauro Soligo</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/katodo/ros_plutarco</url>

  <author email="mauro.soligo@katodo.com">Mauro Soligo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

</package>
